--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	  <h3>I'm <strong>Marcin Szubert</strong>, a Postdoctoral Researcher at the <a href="http://www.uvm.edu/">University of Vermont</a>.</h3>
 	  <h3>I work in the <a href="http://www.meclab.org/">Morphology, Evolution & Cognition Laboratory</a><br> under the supervision of professor <a href="http://www.cs.uvm.edu/~jbongard/">Josh Bongard</a>.</h3>
 	  <h3> My primary research interest is <strong>evolutionary computation</strong> with a focus on <strong>genetic programming</strong> and <strong>coevolutionary algorithms</strong>.</h3>
-	  <h3>For more information check out my <a href="/publications.html"> publications</a> and <a href="http://biomadeira.github.io/vitae">CV</a>.</h3>
+	  <h3>For more information check out my <a href="/publications.html"> publications</a> and <a href="/cv.pdf">CV</a>.</h3>
 	  <div class="social">
 	<h4>
 		
